Add GUI buttons for player's choice.
Game logic of playing 5 consecutive rounds is disabled and will be
changed in future updates.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
 </head>
 <body>
-    
+    <p>Choose your hand:</p>
+
+    <div class="hands">
+        <button id="rock" class="players-hand-button">Rock</button>
+        <button id="paper" class="players-hand-button">Paper</button>
+        <button id="scissors"class="players-hand-button">Scissors</button>
+    </div>
 </body>
 </html>
