Add divs for result of a round and current scores

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <button id="paper" class="players-hand-button">Paper</button>
         <button id="scissors"class="players-hand-button">Scissors</button>
     </div>
+    <div id="roundResult"></div>
+    <div id="score"></div>
 </body>
 </html>
